<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodtracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_results"
        android:name="com.example.foodtracker.ui.results.ResultsFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/nav_overview"
        android:name="com.example.foodtracker.ui.overview.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.foodtracker.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.foodtracker.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.foodtracker.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.foodtracker.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>